--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "dotenv>=0.9.9",
+    "flask>=3.1.2",
+    "flask-cors>=6.0.1",
     "langchain>=1.0.2",
     "langchain-openai>=0.2.0",
     "langchain-qdrant>=1.1.0",
